errors fixed in frontend partial views added

--- a/Frontend/HotelProject.WebUI/Properties/launchSettings.json
+++ b/Frontend/HotelProject.WebUI/Properties/launchSettings.json
@@ -20,6 +20,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "hotReloadEnabled": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
